--- a/docker-compose(original).yaml
+++ b/docker-compose(original).yaml
@@ -6,16 +6,11 @@ services:
       - "8080"
     ports:
       - "80:80"
-      - "443:443"
     command:
       - --api.insecure=true
       - --providers.docker
       - --entryPoints.web.address=:80
-      # - --providers.docker.exposedbydefault=false
-      - --entryPoints.websecure.address=:443
-      - --certificatesresolvers.myresolver.acme.tlschallenge=true
-      - --certificatesresolvers.myresolver.acme.email=votre@email.com
-      - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
+      - --providers.docker.exposedbydefault=false
       #- --log.level=DEBUG
     labels:
       - "traefik.enable=true"
@@ -27,22 +22,20 @@ services:
       - play
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./letsencrypt:/letsencrypt
     networks:
       default:
         aliases:
-          - "front.workspace.onexus.tech"
-          - "play.workspace.onexus.tech"
-          - "room-api.workspace.onexus.tech"
-          - "maps.workspace.onexus.tech"
-          - "oidc.workspace.onexus.tech"
-          - "map-storage.workspace.onexus.tech"
-          - "xmpp.workspace.onexus.tech"
-          - "matrix.workspace.onexus.tech"
-          - "pusher.workspace.onexus.tech"
+          - "front.workadventure.localhost"
+          - "play.workadventure.localhost"
+          - "room-api.workadventure.localhost"
+          - "maps.workadventure.localhost"
+          - "oidc.workadventure.localhost"
+          - "map-storage.workadventure.localhost"
+          - "xmpp.workadventure.localhost"
+          - "matrix.workadventure.localhost"
+          - "pusher.workadventure.localhost"
   play:
     image: thecodingmachine/nodejs:v2-20-bullseye
-    user: "1000:1000"
     command: npm run dev
     working_dir: /usr/src/app/play
     volumes:
@@ -66,11 +59,11 @@ services:
       ENABLE_MAP_EDITOR: "$ENABLE_MAP_EDITOR"
       HOST: "0.0.0.0"
       NODE_ENV: development
-      ALLOWED_CORS_ORIGIN: "http://play.workadventure.onexus.tech"
-      VITE_URL: "http://front.workspace.onexus.tech"
-      PUSHER_URL: http://play.workspace.onexus.tech
-      FRONT_URL: http://play.workadventure.onexus.tech
-      UPLOADER_URL: http://uploader.workspace.onexus.tech
+      ALLOWED_CORS_ORIGIN: "http://play.workadventure.localhost"
+      VITE_URL: "http://front.workadventure.localhost"
+      PUSHER_URL: http://play.workadventure.localhost
+      FRONT_URL: http://play.workadventure.localhost
+      UPLOADER_URL: http://uploader.workadventure.localhost
       ICON_URL: http://icon.workadventure.localhost
       STUN_SERVER: "$STUN_SERVER"
       TURN_SERVER: "$TURN_SERVER"
@@ -187,7 +180,6 @@ services:
 
   maps:
     image: thecodingmachine/php:8.1-v4-apache-node12
-    user: "1000:1000"
     environment:
       DEBUG_MODE: "$DEBUG_MODE"
       HOST: "0.0.0.0"
@@ -208,7 +200,6 @@ services:
 
   back:
     image: thecodingmachine/nodejs:v2-20-bullseye
-    user: "1000:1000"
     command: npm run dev
     working_dir: /usr/src/app/back
     environment:
@@ -260,7 +251,6 @@ services:
 
   map-storage:
     image: thecodingmachine/nodejs:v2-20-bullseye
-    user: "1000:1000"
     command: npm run start:dev
     #command: npm run profile
     working_dir: /usr/src/app/map-storage
@@ -300,7 +290,6 @@ services:
 
   uploader:
     image: thecodingmachine/nodejs:v2-20-bullseye
-    user: "1000:1000"
     command: npm run dev
     #command: npm run profile
     working_dir: /usr/src/app/uploader
@@ -334,7 +323,6 @@ services:
 
   messages:
     image: thecodingmachine/nodejs:v2-20-bullseye-build
-    user: "1000:1000"
     environment:
       STARTUP_COMMAND_1: npm install
       STARTUP_COMMAND_2: npm run proto:watch
@@ -345,15 +333,12 @@ services:
       #- ./chat:/usr/src/chat
       - ./map-storage:/usr/src/map-storage
       - ./libs:/usr/src/libs
-    labels:
-      - "traefik.enable=false"  # Désactive Traefik pour ce service car c'est un service interne
 
   redis:
     image: redis:6
-    user: "1000:1000"
+
   redisinsight:
     image: redislabs/redisinsight:latest
-    user: "1000:1000"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.redisinsight.rule=Host(`redis.workadventure.localhost`)"
@@ -362,7 +347,6 @@ services:
 
   icon:
     image: matthiasluedtke/iconserver:v3.15.0
-    user: "1000:1000"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.icon.rule=Host(`icon.workadventure.localhost`)"
@@ -372,7 +356,6 @@ services:
   # A mock server to test OpenID connect connectivity
   oidc-server-mock:
     image: ghcr.io/soluto/oidc-server-mock:0.7.0
-    user: "1000:1000"
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       SERVER_OPTIONS_INLINE: |
@@ -473,7 +456,6 @@ services:
 
   synapse:
     image: matrixdotorg/synapse:v1.115.0
-    user: "1000:1000"
     entrypoint: /data/start.sh
     labels:
       - "traefik.enable=true"
