debug for front

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,10 @@ services:
       - "traefik.port=8080"
       - "traefik.http.routers.traefik.rule=Host(`traefik.workadventure.localhost`)"
       - "traefik.http.routers.traefik.service=api@internal"
+      - "traefik.http.routers.main.rule=Host(`workspace.onexus.tech`)"
+      - "traefik.http.routers.main.middlewares=redirect-to-play"
+      - "traefik.http.middlewares.redirect-to-play.redirectregex.regex=^https?://workspace\\.onexus\\.tech/(.*)"
+      - "traefik.http.middlewares.redirect-to-play.redirectregex.replacement=https://play.workspace.onexus.tech/$${1}"
     depends_on:
       - back
       - play
@@ -164,25 +168,13 @@ services:
       IFRAMELY_KEY: "$IFRAMELY_KEY"
     labels:
       - "traefik.enable=true"
-
       - "traefik.http.routers.front.rule=Host(`front.workadventure.onexus.tech`)"
       # pour l'erreur cors
       - "traefik.http.routers.play.entryPoints=web,websecure"
       - "traefik.http.routers.play.tls=true"
-
-      - "traefik.http.routers.front.service=front"
-      - "traefik.http.services.front.loadbalancer.server.port=8080"
-
-      - "traefik.http.routers.room-api.rule=Host(`room-api.workadventure.localhost`)"
-      - "traefik.http.routers.room-api.service=room-api"
-      - "traefik.http.services.room-api.loadbalancer.server.port=50051"
-      - "traefik.http.services.room-api.loadbalancer.server.scheme=h2c"
-
-      - "traefik.http.routers.play.rule=HostRegexp(`{domain:.*}`)"
-      - "traefik.http.routers.play.priority=1"
+      - "traefik.http.routers.play.rule=Host(`play.workspace.onexus.tech`)"
       - "traefik.http.routers.play.service=play"
       - "traefik.http.services.play.loadbalancer.server.port=3000"
-
       - "traefik.http.routers.play-ws.rule=HostRegexp(`{domain:.*}`) && ( Path(`/admin/rooms`) || Path(`/room`) )"
       - "traefik.http.routers.play-ws.priority=2"
       - "traefik.http.routers.play-ws.service=play-ws"
