--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - --entryPoints.web.address=:80
       # - --providers.docker.exposedbydefault=false
       - --entryPoints.websecure.address=:443
-      - ----certificatesresolvers.letsencrypt.acme.email=sataboum3@gmail.com
+      - --certificatesresolvers.letsencrypt.acme.email=sataboum3@gmail.com
       - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
       - --certificatesresolvers.letsencrypt.acme.httpchallenge=true
       - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
